# Django_mailing

./: .env_example  README.md  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: blog_detail.html  index.html
config/: settings.py  urls.py
fixtures/: auth_data.json  blogs_data.json  main_app_data.json  users_data.json
main_app/: admin.py  forms.py  models.py  scheduler.py  services.py  urls.py  views.py
main_app/management/commands/: runscheduler.py
main_app/migrations/: 0001_initial.py  0002_initial.py
main_app/templates/main_app/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  homepage.html  letter_confirm_delete.html  letter_detail.html  letter_form.html  letter_list.html  logmessage_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  manager.html
main_app/templates/main_app/includes/: inc_menu.html
users/: forms.py  models.py  services.py  views.py
users/management/commands/: csu.py  manager.py  test_user.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  new_password.html  register.html  user_form.html  verification.html
